:bug: bug: fix overlay, alignment and button label fields effecting content card in multicolumn

--- a/dev/scss/snippets/content-card.scss
+++ b/dev/scss/snippets/content-card.scss
@@ -19,6 +19,8 @@
       position: absolute;
       z-index: 3;
       bottom: 0;
+      left: 0;
+      right: 0;
       padding: 0;
       color: var(--contentCardSectionTextColor);
       margin: 0;
